--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
         "@electron-forge/shared-types": "^7.4.0",
         "@electron/fuses": "^1.8.0",
         "@playwright/test": "^1.44.1",
-        "@storybook/addon-essentials": "^8.1.9",
-        "@storybook/addon-interactions": "^8.1.9",
-        "@storybook/addon-links": "^8.1.9",
-        "@storybook/addon-onboarding": "^8.1.9",
+        "@storybook/addon-essentials": "^8.1.10",
+        "@storybook/addon-interactions": "^8.1.10",
+        "@storybook/addon-links": "^8.1.10",
+        "@storybook/addon-onboarding": "^8.1.10",
         "@storybook/blocks": "^8.0.9",
         "@storybook/react": "^8.0.9",
-        "@storybook/react-vite": "^8.1.9",
+        "@storybook/react-vite": "^8.1.10",
         "@storybook/test": "^8.0.9",
         "@swc/cli": "^0.3.12",
-        "@swc/core": "^1.6.1",
+        "@swc/core": "^1.6.3",
         "@swc/jest": "^0.2.36",
         "@testing-library/jest-dom": "^6.4.6",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
         "@types/jest": "^29.5.12",
-        "@types/node": "^20.14.2",
+        "@types/node": "^20.14.6",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "autoprefixer": "^10.4.19",
@@ -57,20 +57,63 @@
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.4.38",
         "prettier": "^3.3.2",
-        "prettier-plugin-tailwindcss": "^0.6.4",
-        "storybook": "^8.1.9",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "storybook": "^8.1.10",
         "tailwindcss": "^3.4.4",
         "ts-node": "^10.9.2",
         "typescript": "~5.4.5",
         "vite": "^5.3.1"
     },
     "dependencies": {
+        "@ariakit/react": "^0.4.7",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
+        "@radix-ui/react-toolbar": "^1.0.4",
+        "@radix-ui/react-tooltip": "^1.0.7",
+        "@udecode/cn": "^33.0.0",
+        "@udecode/plate-alignment": "^34.0.0",
+        "@udecode/plate-autoformat": "^34.0.0",
+        "@udecode/plate-basic-marks": "^34.0.0",
+        "@udecode/plate-block-quote": "^34.0.0",
+        "@udecode/plate-break": "^34.0.0",
+        "@udecode/plate-caption": "^34.1.0",
+        "@udecode/plate-code-block": "^34.0.0",
+        "@udecode/plate-combobox": "^34.0.8",
+        "@udecode/plate-emoji": "^34.0.8",
+        "@udecode/plate-floating": "^34.0.6",
+        "@udecode/plate-font": "^34.0.0",
+        "@udecode/plate-heading": "^34.0.7",
+        "@udecode/plate-horizontal-rule": "^34.0.0",
+        "@udecode/plate-indent": "^34.0.0",
+        "@udecode/plate-line-height": "^34.0.0",
+        "@udecode/plate-link": "^34.0.6",
+        "@udecode/plate-list": "^34.0.0",
+        "@udecode/plate-media": "^34.1.0",
+        "@udecode/plate-node-id": "^34.0.0",
+        "@udecode/plate-paragraph": "^34.0.0",
+        "@udecode/plate-reset-node": "^34.0.0",
+        "@udecode/plate-resizable": "^34.0.0",
+        "@udecode/plate-select": "^34.0.0",
+        "@udecode/plate-selection": "^34.1.0",
+        "@udecode/plate-serializer-csv": "^34.0.0",
+        "@udecode/plate-serializer-docx": "^34.1.0",
+        "@udecode/plate-serializer-md": "^34.0.0",
+        "@udecode/plate-tabbable": "^34.0.0",
+        "@udecode/plate-table": "^34.0.0",
+        "@udecode/plate-toggle": "^34.0.0",
+        "@udecode/plate-trailing-block": "^34.0.0",
         "@vitejs/plugin-react": "^4.3.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
         "electron-squirrel-startup": "^1.0.1",
         "i18next": "^23.11.5",
         "lucide-react": "^0.395.0",
@@ -78,6 +121,7 @@
         "react-dom": "^18.3.1",
         "react-i18next": "^14.1.2",
         "react-query": "^3.39.3",
+        "react-resizable-panels": "^2.0.19",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
