--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-menubar": "^1.1.1",
         "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-scroll-area": "^1.1.0",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
@@ -78,6 +80,7 @@
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-toolbar": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@remixicon/react": "^4.2.0",
         "@udecode/cn": "^33.0.0",
         "@udecode/plate-alignment": "^34.0.0",
         "@udecode/plate-autoformat": "^34.0.0",
