--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@types/react-dom": "^18.3.0",
         "autoprefixer": "^10.4.19",
         "electron": "31.0.1",
+        "electron-devtools-installer": "^3.2.0",
         "electron-playwright-helpers": "^1.7.1",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
@@ -66,6 +67,7 @@
     },
     "dependencies": {
         "@ariakit/react": "^0.4.7",
+        "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
